[package]
description = "Created with Anchor"
edition = "2018"
name = "token_middleware"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_middleware"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = {version = "0.24.2"}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
