[package]
description = "Created with Anchor"
edition = "2018"
name = "escrow_marketplace"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_marketplace"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = {version = "0.24.2"}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
